Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-14062

MS Virltual CD-ROM Control Panel 2.0.11 can't start a service

    XMLWordPrintable

Details

    Description

      Installing a driver from the utility works successfully, but the "Start" button is inactive, so launching a service and next adding the drives and mounting images is impossible. It permaturely ends with errors. In XP button is active and service starts correctly. VCdRom.sys is already placed to system32\drivers. I did each step according to the instruction in archive. I've downloaded it from here: https://filehippo.com/download_virtual-cd-rom-control-panel/download/fef87d026d611df6e8cb11129128fb58/.

      Attachments

        1. adding drive successfully.png
          adding drive successfully.png
          34 kB
        2. debug.log
          64 kB
        3. eject successfully.png
          eject successfully.png
          34 kB
        4. mounted image.png
          mounted image.png
          31 kB
        5. mounting image successfully.png
          mounting image successfully.png
          34 kB
        6. ReactOS_ISO_Mount1.jpg
          ReactOS_ISO_Mount1.jpg
          99 kB
        7. ReactOS_ISO_Mount2.jpg
          ReactOS_ISO_Mount2.jpg
          152 kB
        8. removing drive successfully.png
          removing drive successfully.png
          33 kB
        9. services.diff
          4 kB
        10. Start button works.png
          Start button works.png
          36 kB
        11. VirtualBox_ReactOS_04_12_2017_13_50_06.png
          VirtualBox_ReactOS_04_12_2017_13_50_06.png
          54 kB
        12. VirtualBox_ReactOS_04_12_2017_15_00_37.png
          VirtualBox_ReactOS_04_12_2017_15_00_37.png
          39 kB
        13. VirtualBox_ReactOS_04_12_2017_15_01_06.png
          VirtualBox_ReactOS_04_12_2017_15_01_06.png
          39 kB
        14. VirtualBox_ReactOS_04_12_2017_21_17_43.png
          VirtualBox_ReactOS_04_12_2017_21_17_43.png
          35 kB
        15. VirtualBox_Windows XP_04_12_2017_14_04_03.png
          VirtualBox_Windows XP_04_12_2017_14_04_03.png
          448 kB

        Activity

          People

            Heis Spiter Pierre Schweitzer
            Oleg Dubinskij Oleg Dubinskiy
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: