[SERVICES] Fix querying the status of a registered but not started driver. The current implementation was broken and some dead code was never called; always failing before. This fix revives this dead code! Extra fix: avoid derefencing potential null-ptr. And also, as bonus, comment the function so that logic can be easily understood.

CORE-14062